--- a/templates/teacherdashboard.html
+++ b/templates/teacherdashboard.html
@@ -11,21 +11,21 @@
 
 </head>
 
-<body>
+<body class="bg-cover bg-center bg-no-repeat" style="background-image: url('../static/images/pexels-jakub-novacek-924824.jpg');">
 
-    <header>
-        <nav class="bg-black border-gray-200 dark:bg-gray-900">
-            <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-                <!-- <a href="" class="flex items-center space-x-3 rtl:space-x-reverse ">
+<header>
+    <nav class="bg-black border-gray-200 dark:bg-gray-900">
+        <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+            <!-- <a href="" class="flex items-center space-x-3 rtl:space-x-reverse ">
                 <img src="../../static/images/logo3.png" class="h-24" alt="Kyubee Logo" />
                 <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"></span>
             </a> -->
 
-                <a href="" class="flex items-center space-x-3 rtl:space-x-reverse">
-                    <img src="../../static/images/logo3.png" class="h-16 flex-shrink-0" alt="Kyubee Logo" />
-                    <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"></span>
-                </a>
-                <button data-collapse-toggle="navbar-default" type="button"
+            <a href="" class="flex items-center space-x-3 rtl:space-x-reverse">
+                <img src="../../static/images/logo3.png" class="h-16 flex-shrink-0" alt="Kyubee Logo" />
+                <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"></span>
+            </a>
+            <button data-collapse-toggle="navbar-default" type="button"
                     class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
                     aria-controls="navbar-default" aria-expanded="false">
                 <span class="sr-only">Open main menu</span>
@@ -89,46 +89,81 @@
         </div>
     </nav>
 </header>
-<div class="alert">
+<div class="alert bg-opacity-50">
     {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            {% for category, message in messages %}
-                {% if 'Current User Logged In' in message %}
-                    <div class="alert">
-                        {{ message }}
-                    </div>
-                {% endif %}
-            {% endfor %}
-        {% endif %}
+    {% if messages %}
+    {% for category, message in messages %}
+    {% if 'Current User Logged In' in message %}
+    <div class="alert text-white">
+        {{ message }}
+    </div>
+    {% endif %}
+    {% endfor %}
+    {% endif %}
     {% endwith %}
-
-
 </div>
 
 
-<main class="h-[60vh] w-full bg-blue-50">
-
+<main class="h-[100vh] w-full bg-cover bg-center bg-no-repeat" >
     <div class="flex flex-col justify-start items-center pt-40 gap-5">
-
-        <h1 class="text-6xl font-black">Welcome to Kyubee</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro et velit ratione voluptates, aliquid eius
-            explicabo nihil, est accusamus magni libero ex, at vitae. Accusantium.</p>
+        <h1 class="text-7xl font-medium text-white mt-36">WELCOME TO KYUBEE</h1>
     </div>
 
+
+    <form>
+        <label for="default-search" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Search</label>
+        <div class="relative max-w-4xl mx-auto mt-16"> <!-- Set max width and center the container -->
+            <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"> <!-- Adjusted position of the search icon -->
+                <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
+                </svg>
+            </div>
+
+            <input type="search" id="default-search" class="block w-full p-4 pl-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search Question Papers, Notes..." required>
+            <button type="submit" class="text-white absolute end-2.5 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Search</button>
+        </div>
+    </form>
 </main>
 
 <section class="w-2/3 mx-auto py-20">
-    <div class="">
-        <h1 class="text-center font-black text-4xl">Upload Section</h1>
-        <form action="" class="my-20" enctype="multipart/form-data">
+    <h1 class="flex justify-center font-white text-4xl text-white">UPLOAD SECTION</h1>
+    <div class="flex justify-center">
+
+        <form action="{{ url_for('pdf_upload') }}" class="my-20" enctype="multipart/form-data" method="post">
 
             <label class="block mb-2 text-md font-medium text-gray-900" for="file_input">Upload file</label>
-            <input name="file"
-                   class="block w-full text-md text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50"
-                   aria-describedby="file_input_help" id="file_input" type="file">
+            <div class="flex justify-between">
+                <input type="file" name="file_input" onChange="preview(this)"
+                       class="block w-128 text-md text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50"
+                       aria-describedby="file_input_help" id="file_input">
+                <button type="submit"
+                        class="px-5 py-1 rounded bg-yellow-500 text-black text-sm">Select PDF File</button>
+            </div>
             <p class="mt-1 text-md text-gray-500" id="file_input_help">SVG, PNG, JPG or GIF (MAX. 800x400px).</p>
 
+            <div id="preview-pdf">
+                <!--            <iframe src="{{ url_for('pdf_view') }}" width="800" height="900"></iframe>-->
+                <iframe src=""></iframe>
+            </div>
 
+            <script>
+
+                function preview(input) {
+                var preview_object = document.getElementById('preview-pdf');
+                preview_object.innerHTML = "";
+
+                var file = input.files[0];
+                 console.log((window.URL ? URL : webkitURL).createObjectURL(file));
+                var iframe = document.createElement('iframe');
+                iframe.src = (window.URL ? URL : webkitURL).createObjectURL(file);
+                iframe.style.height = '900px';
+                iframe.style.width = '800px';
+                preview_object.appendChild(iframe);
+
+
+
+                }
+            </script>
 
             <h1 class="text-center text-3xl font-black">OR</h1>
             <div id="questions-input-div">
@@ -154,7 +189,6 @@
 <script>
 
         const questionDiv = document.getElementById("questions-input-div")
-
 
         const addQuestionBtn = document.getElementById("questionBtn")
 
