--- a/templates/teacherprofilepage.html
+++ b/templates/teacherprofilepage.html
@@ -109,9 +109,9 @@
 
                     <div>
                         <label for="department"
-                               class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Department</label>
+                               class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Teacher Department</label>
                         <input type="text" name="department" id="department"
-                               class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                               class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray 900 dark:focus:ring-blue-500 dark:focus:border-blue-500"
                                autocomplete="off" value="{{ Department }}" readonly>
                     </div>
                     <div>
