--- a/templates/teacher/notesuploadsection.html
+++ b/templates/teacher/notesuploadsection.html
@@ -1,24 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
 <head>
-    <title>Drag and Drop File Upload</title>
+    <title>Upload Section</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="shortcut icon" href="/assets/favicon.ico">
-    <!-- <link rel="stylesheet" href="./main.css"> -->
+    <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="{{url_for('static',filename='dist/css/output.css')}}">
     <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
+<body class="bg-cover bg-center bg-no-repeat" style="background-image: url('../../static/images/pexels-jakub-novacek-924824.jpg');">
 
-<body>
 
 <header>
     <nav class="bg-black border-gray-200 dark:bg-gray-900">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
 
-            <a href="{{url_for('teacher_dashboard')}}" class="flex">
+            <a href="" class="flex">
                 <img src="../../static/images/logo3.png" class="h-14 flex-shrink-0 ml-auto" alt="Kyubee Logo" />
                 <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"></span>
             </a>
@@ -94,88 +93,104 @@
     </nav>
 </header>
 
-<section class="bg-gray-50 dark:bg-gray-900">
-    <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
-
+<main class="h-[100vh] w-full bg-cover bg-center bg-no-repeat">
+    <div class="flex justify-center">
 
         {% with messages = get_flashed_messages() %}
         {% if messages %}
-        <div class="w-full bg-green-800 text-white p-3 rounded-md shadow-md mb-5 sm:max-w-md">
-
+        <div class="w-full bg-blue-700 text-white p-2 rounded-md shadow-md sm:max-w-md text-sm">
             {% for message in messages %}
             <p>{{ message }}</p>
             {% endfor %}
         </div>
         {% endif %}
         {% endwith %}
-
-
-        <div class="w-full bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
-
-
-            <div class="p-6 space-y-4 md:space-y-6 sm:p-8">
-                <h1
-                        class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
-                    Profile Page
-                </h1>
-                <form class="space-y-4 md:space-y-6" action="{{ url_for('teacher_account') }}" method="POST">
-
-<!--{#                        <img src="{{ url_for('profile_picture',user_id=user_id) }}"#}-->
-<!--{#                             class="object-scale-down h-48 w-96 ...">#}-->
-                    <div class="flex justify-center items-center">
-                        <img class="max-w-36 max-h-36" src="{{ url_for('profile_picture',user_id=user_id) }}" alt="Extra large avatar">
-                    </div>
-                    <div>
-                        <label for="email"
-                               class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email</label>
-                        <input type="email" name="email" id="email"
-                               class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                               autocomplete="off" value={{ current_user.EMAIL }}>
-                    </div>
-
-                    <div>
-                        <label for="first_name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">First
-                            Name</label>
-                        <input type="text" name="first_name" id="first_name"
-                               class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                               autocomplete="off" value="{{ firstName }}">
-                    </div>
-
-                    <div>
-                        <label for="last_name"
-                               class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Last Name</label>
-                        <input type="text" name="last_name" id="last_name"
-                               class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                               autocomplete="off" value="{{ lastName }}">
-                    </div>
-
-
-                    <div>
-                        <label for="department"
-                               class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Teacher Department</label>
-                        <input type="text" name="department" id="department"
-                               class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray 900 dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                               autocomplete="off" value="{{ Department }}" readonly>
-                    </div>
-                    <div>
-                        <label for="phone_number"
-                               class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Phone Number</label>
-                        <input type="text" name="phone_number" id="phone_number"
-                               class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-                               autocomplete="off" value="{{ phoneNumber }}">
-                    </div>
-
-                    <button type="submit"
-                            class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">Update</button>
-
-                </form>
-            </div>
-        </div>
-
     </div>
+    <div class="flex flex-col justify-start items-center pt-40 gap-20">
+
+        <h1 class="text-7xl font-medium text-white mt-32">Upload Notes</h1>
+<!--        <h1 class="text-3xl font-medium text-white mt-10">Upload your notes here</h1>-->
+        <button id="scrollButton"
+                class="text-white end-2.5 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-2xl px-12 py-3 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+            Click Here
+        </button>
+    </div>
+
+</main>
+<section id="section2" class="w-2/3 mx-auto py-20">
+
+    <div class="flex justify-center">
+
+        <form action="{{ url_for('pdf_upload') }}" class="my-20" enctype="multipart/form-data" method="post">
+
+            <label class="block mb-2 text-md font-medium text-white" for="file_input">Upload file</label>
+            <div class="flex justify-between mb-6">
+                <input type="file" name="file_input" onChange="preview(this)"
+                       class="block w-128 text-md text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50"
+                       aria-describedby="file_input_help" id="file_input">
+                <button type="submit"
+                        class="px-5 py-1 rounded bg-yellow-500 text-black text-sm ml-6">Upload PDF
+                </button>
+
+
+            </div>
+
+            <input name="pdf-name" id="pdf-name" placeholder="Enter PDF Name"
+                   class="bg-gray-50 border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 mb-8"
+                   autocomplete="off">
+            <!--            <p class="mt-1 text-md text-gray-500" id="file_input_help">SVG, PNG, JPG or GIF (MAX. 800x400px).</p>-->
+            <div class="flex" id="preview-pdf">
+                <iframe src=""></iframe>
+            </div>
+
+
+<!--            <div class="flex justify-center">-->
+<!--                <button type="submit" class="px-8 py-2 rounded bg-yellow-500 text-black text-lg">-->
+<!--                    Upload PDF-->
+<!--                </button>-->
+<!--            </div>-->
+        </form>
+    </div>
+
+
 </section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
+<script>
+    document.getElementById('scrollButton').addEventListener('click', function() {
+      smoothScroll('#section2');
+    });
 
+    function smoothScroll(targetSelector) {
+        const targetElement = document.querySelector(targetSelector);
+        if (targetElement) {
+            window.scrollTo({
+            top: targetElement.offsetTop,
+            behavior: 'smooth'
+            });
+        }
+    }
+</script>
+<script>
+
+    function preview(input) {
+    var preview_object = document.getElementById('preview-pdf');
+    preview_object.innerHTML = "";
+
+    var file = input.files[0];
+     console.log((window.URL ? URL : webkitURL).createObjectURL(file));
+    var iframe = document.createElement('iframe');
+    iframe.src = (window.URL ? URL : webkitURL).createObjectURL(file);
+    iframe.style.height = '900px'   ;
+    iframe.style.width = '800px';
+    preview_object.appendChild(iframe);
+    }
+</script>
 </body>
-
 </html>
+
+<!--if (targetElement) {-->
+<!--window.scrollTo({-->
+<!--top: targetElement.offsetTop,-->
+<!--behavior: 'smooth'-->
+<!--});-->
+<!--}-->
