--- a/templates/teacher/teacherdashboard.html
+++ b/templates/teacher/teacherdashboard.html
@@ -16,10 +16,6 @@
 <header>
     <nav class="bg-black border-gray-200 dark:bg-gray-900">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <!-- <a href="" class="flex items-center space-x-3 rtl:space-x-reverse ">
-                <img src="../../static/images/logo3.png" class="h-24" alt="Kyubee Logo" />
-                <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"></span>
-            </a> -->
 
             <a href="" class="flex">
                 <img src="../../static/images/logo3.png" class="h-14 flex-shrink-0 ml-auto" alt="Kyubee Logo" />
@@ -45,20 +41,20 @@
                     </li>
 
                     <li>
-                        <a href="{{ url_for('generate_paper') }}"
+                        <a href="{{ url_for('question_paper_upload') }}"
                            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Upload
                             Papers</a>
                     </li>
 
                     <li>
-                        <a href="{{ url_for('upload_paper') }}"
+                        <a href="{{ url_for('upload_notes') }}"
                            class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Upload
                             Notes</a>
                     </li>
 
                     <li>
                         <a href="{{url_for('teacher_account')}}"
-                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Account</a>
+                           class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Profile</a>
                     </li>
 
                     <li>
@@ -114,7 +110,8 @@
 
 <main class="h-[100vh] w-full bg-cover bg-center bg-no-repeat" >
     <div class="flex flex-col justify-start items-center pt-40 gap-5">
-        <h1 class="text-7xl font-medium text-white mt-22">WELCOME {{current_user.name}}</h1>
+        <h1 class="text-7xl font-medium text-white mt-22">WELCOME {{current_user.first_name + " " +
+            current_user.last_name}}</h1>
 <!--        <h1 class="text-7xl font-medium text-white mt-12"></h1>-->
     </div>
 
